package eapli.base.domain.jobApplication;

public class ApplicationStatus {
}

