package eapli.base.domain.jobOpening;

public enum ContractType {
    FULL_TIME,
    PART_TIME
}
